<resources>
    <string name="app_name">Smartware Africa POS</string>
    <string name="link_to_reset_your_password_will_be_sent_to_your_email">Link to reset your password will be sent to your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="send_link">Send Link</string>
    <string name="click_on_the_link_to_reset_your_password">Click on the link to reset your password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="selling_price">Selling Price</string>
    <string name="buying_price">Buying Price</string>
    <string name="touch_image_to_choose">Touch image to choose</string>
    <string name="product_image">Product Image</string>
    <string name="kes_0_00">kes 0.00</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sell">Sell</string>
    <string name="adjust_quantity">Adjust Quantity</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="total_price">Total Price:</string>
    <string name="register_now">Register now</string>
    <string name="registered_please_login">Registered? Please login</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logo">logo</string>
    <string name="confirm">Confirm</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="ksh">KSH:</string>
    <string name="empty_cart">Empty cart</string>
    <string name="checkout_and_generate_receipt">Checkout and Generate receipt</string>
    <string name="home">HOME</string>
    <string name="path_to_storage_location">Path to storage location</string>
</resources>
