<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Users.ResetPasswordActivity">


        <TextView
            android:id="@+id/text_view_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="15dp"
            android:text="@string/link_to_reset_your_password_will_be_sent_to_your_email"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/click_on_the_link_to_reset_your_password"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reset_pwd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/please_enter_your_email"
            android:hint="@string/please_enter_your_email"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0F6A9C"
            android:padding="20sp"
            android:text="@string/send_link"
            android:textColor="@android:color/white"
            tools:ignore="UnusedAttribute" />

</LinearLayout>
