<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#F2F2F7"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/product_image"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_appkings" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/product_name"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/productSellingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kes_0_00"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>