<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Products.ViewProductActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/viewProductImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            android:padding="20dp"
            android:src="@drawable/ic_appkings" />

        <TextView
            android:id="@+id/viewProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewProductImage"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/product_name"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProductDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewProductName"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/viewProductSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewProductDescription"
            android:layout_centerHorizontal="true"
            android:layout_toStartOf="@id/viewProductSellingPrice"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:text="@string/ksh"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/viewProductSellingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewProductDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kes_0_00"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAdjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewProductSellingPrice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/adjust_quantity" />

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/adjustQuantityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAdjust"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:elevation="6dp"
            app:finalNumber="20"
            app:initialNumber="1"
            app:textSize="12sp">

        </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="30dp"
            android:layout_toStartOf="@+id/addToCartButton"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="2dp"
            android:paddingBottom="5dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="15dp"
            android:src="@drawable/ic_add_shopping_cart_white_24dp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>