<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Products.AddProductsActivity">

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CED9E6"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/product_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_circle_outline_white_24dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/productImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/touch_image_to_choose"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:autofillHints="@string/product_name"
                    android:hint="@string/product_name"
                    android:inputType="text"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editTextBuyingPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:autofillHints="@string/buying_price"
                    android:hint="@string/buying_price"
                    android:inputType="number"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editTextSellingPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:autofillHints="@string/selling_price"
                    android:hint="@string/selling_price"
                    android:inputType="number"
                    tools:targetApi="o" />


                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:autofillHints="@string/description"
                    android:hint="@string/description"
                    android:inputType="text"
                    tools:targetApi="o" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#0F6A9C"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>