<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart.CartActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textViewTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/total_price"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageEmptyCart"
        android:layout_below="@+id/layout1"
        android:visibility="invisible"
        android:src="@drawable/empty_cart"
        android:layout_above="@+id/buttonConfirmPurchase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty_cart" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartItemsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonConfirmPurchase"
        android:layout_below="@+id/layout1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConfirmPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
</RelativeLayout>