<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="15dp"
    app:cardCornerRadius="2dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cartProductName"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/product_name"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cartProductQuantity"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/product_quantity"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/cartProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>