<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5F5"
    android:fillViewport="true"
    tools:context=".Users.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".Profile.LoginFragment">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:contentDescription="logo"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Please enter your email"
            android:hint="@string/please_enter_your_email"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Please enter your password"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890._-"
            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textIsSelectable="false"
            tools:targetApi="o" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0F6A9C"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Register Here"
            android:textAlignment="center"
            android:textColor="#E70D0D"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text_view_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Forgot password?"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>
